# chess-engine-rs

./: Cargo.toml
board-files/: standard.json
src/: main.rs  timer.rs
src/board/: coordinate.rs  mod.rs
src/piece/: mod.rs
