[package]
name = "chess-toolkit-rs"
version = "0.1.0"
authors = ["Michael Leonard <maybeillrememberit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
more-asserts = "0.2.1"